[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Collection_card.gd" type="Script" id=1]
[ext_resource path="res://cards/collection_backgrounds/Common.png" type="Texture" id=2]
[ext_resource path="res://cards/avatar/9.png" type="Texture" id=3]
[ext_resource path="res://fonts/Default_font.tres" type="Theme" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CardBackground" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Avatar" type="Sprite" parent="CardBackground"]
position = Vector2( 0, -58.6604 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="NameLabel" type="Label" parent="CardBackground"]
margin_left = -101.259
margin_top = 26.5369
margin_right = -61.2591
margin_bottom = 40.5369
theme = ExtResource( 4 )
text = "Name:"

[node name="Name" type="Label" parent="CardBackground/NameLabel"]
margin_left = 65.6438
margin_right = 101.0
margin_bottom = 32.0
theme = ExtResource( 4 )
text = "NA"

[node name="SerieLabel" type="Label" parent="CardBackground"]
margin_left = -101.259
margin_top = 56.5654
margin_right = -38.2591
margin_bottom = 88.5654
theme = ExtResource( 4 )
text = "Serie:"

[node name="Serie" type="Label" parent="CardBackground/SerieLabel"]
margin_left = 57.2638
margin_right = 92.0
margin_bottom = 32.0
theme = ExtResource( 4 )
text = "NA"

[node name="Owned" type="Label" parent="CardBackground"]
margin_left = 29.9003
margin_top = 101.957
margin_right = 41.9003
margin_bottom = 133.957
grow_horizontal = 0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.286275, 0.701961, 0.294118, 1 )
text = "3"
align = 2

[node name="OwnedLabel" type="Label" parent="CardBackground/Owned"]
margin_left = 13.9667
margin_right = 83.9667
margin_bottom = 32.0
theme = ExtResource( 4 )
text = "Owned"

